--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
     <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
-    <script type="text/javascript">Calendly.initBadgeWidget({ url: 'https://calendly.com/livefreelivewell', text: 'Schedule time with me', color: '#0E538F', textColor: '#ffffff', branding: false });</script>
+    <script type="text/javascript">Calendly.initBadgeWidget({ url: 'https://calendly.com/livefreelivewell', text: 'Schedule your strategy session', color: '#0E538F', textColor: '#ffffff', branding: false });</script>
     <script src=”https://js.squareup.com/v2/paymentform”></script>
     <title>livefreelivewell</title>
   </head>
