imporves program calc

--- a/public/index.html
+++ b/public/index.html
@@ -28,9 +28,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
     <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
-    <script type="text/javascript">Calendly.initBadgeWidget({ url: 'https://calendly.com/livefreelivewell', text: 'Schedule your strategy session', color: '#0E538F', textColor: '#ffffff', branding: false });</script>
+    <script type="text/javascript">Calendly.initBadgeWidget({ url: 'https://calendly.com/livefreelivewell', text: 'Schedule Strategy Session', color: '#0E538F', textColor: '#ffffff', branding: false });</script>
     <title>livefreelivewell</title>
-    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/d99f9914d26543c355c0abbb8/6c3602343675156d80d8f1e12.js");</script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
