--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- Calendly -->
     <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+    <!-- Calendly -->
     <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
     <script type="text/javascript">Calendly.initBadgeWidget({ url: 'https://calendly.com/livefreelivewell', text: 'Schedule Strategy Session', color: '#0E538F', textColor: '#ffffff', branding: false });</script>
+    <!-- Pay Pal SDK -->
+    <script src="https://www.paypal.com/sdk/js?client-id=AQSmd8JKqmSNU1Wwhp-E7w-6W0TCTKNC-ZSJIZz1XjkR4TZKJ06UA4Nfo1uDO2CiiK898cYEuTfn0etv&vault=true"></script>
     <title>livefreelivewell</title>
   </head>
   <body>
