--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
     <script type="text/javascript">Calendly.initBadgeWidget({ url: 'https://calendly.com/livefreelivewell', text: 'Schedule Strategy Session', color: '#0E538F', textColor: '#ffffff', branding: false });</script>
     <!-- Pay Pal SDK -->
-    <script src="https://www.paypal.com/sdk/js?client-id=AQSmd8JKqmSNU1Wwhp-E7w-6W0TCTKNC-ZSJIZz1XjkR4TZKJ06UA4Nfo1uDO2CiiK898cYEuTfn0etv&vault=true"></script>
+    <!-- <script src="https://www.paypal.com/sdk/js?client-id=AQSmd8JKqmSNU1Wwhp-E7w-6W0TCTKNC-ZSJIZz1XjkR4TZKJ06UA4Nfo1uDO2CiiK898cYEuTfn0etv&vault=true"></script> -->
     <title>livefreelivewell</title>
   </head>
   <body>
